src/snapshots/prior_dir_problem_is_file.snap
---
source: src/path_facts.rs
expression: snapshot
---
cannot access `/path/to/directory/a/b/c/does_not_exist.txt`
 - Prior path is not a directory `/path/to/directory/a`
    - `/path/to/directory`
        └── `a` file [✅ read, ✅ write, ❌ execute]
