src/snapshots/prior_dir_problem_orig.snap
---
source: src/path_facts.rs
expression: "format!(\"input {}\",\nfixture.scrub().carets(&PathFacts::new(&path).to_string()))"
---
input does not exist `/path/to/directory/a.txt/b/c/does_not_exist.txt`
 - `/path/to/directory/a.txt/b/c/does_not_exist.txt`
                       ^^^^^
                       ↳ File, not a dir [✅ read, ✅ write, ❌ execute]
 - `/path/to/directory/a.txt/b/c/does_not_exist.txt`
             ^^^^^^^^^
             ↳ Dir [✅ read, ✅ write, ✅ execute]
             ↳ Contains (1)
               └── `a.txt` (exists)
🛑
