src/snapshots/rename_two_missing_paths.snap
---
source: src/path_facts.rs
expression: "result.unwrap_err().to_string().replace(&tempdir.path().canonicalize().unwrap().display().to_string(),\n\"/path/to/directory\") + \"🛑\""
---
cannot rename from `doesnotexist.txt` to `also_does_not_exist.txt` due to: {error}.

From path does not exist `doesnotexist.txt`
 - Absolute: `/path/to/directory/doesnotexist.txt`
 - Missing `doesnotexist.txt` from parent directory:
   `/path/to/directory`
      └── (empty)

To path does not exist `also_does_not_exist.txt`
 - Absolute: `/path/to/directory/also_does_not_exist.txt`
 - Missing `also_does_not_exist.txt` from parent directory:
   `/path/to/directory`
      └── (empty)

🛑
